// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Resource Lambda Tests Compute GSI deletion when non key attributes are modified 1`] = `
Object {
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Delete": Object {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when projection type is modified 1`] = `
Object {
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Delete": Object {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when the hash key is renamed 1`] = `
Object {
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Delete": Object {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when the index is removed completely 1`] = `
Object {
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Delete": Object {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when the sort key is modified 1`] = `
Object {
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Delete": Object {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Extract table definition input from event test should extract the correct table definition from event object 1`] = `
Object {
  "attributeDefinitions": Array [
    Object {
      "attributeName": "todoId",
      "attributeType": "S",
    },
    Object {
      "attributeName": "name",
      "attributeType": "S",
    },
    Object {
      "attributeName": "name2",
      "attributeType": "S",
    },
  ],
  "billingMode": "PROVISIONED",
  "globalSecondaryIndexes": Array [
    Object {
      "indexName": "byName2",
      "keySchema": Array [
        Object {
          "attributeName": "name2",
          "keyType": "HASH",
        },
      ],
      "projection": Object {
        "projectionType": "ALL",
      },
      "provisionedThroughput": Object {
        "readCapacityUnits": 5,
        "writeCapacityUnits": 5,
      },
    },
  ],
  "keySchema": Array [
    Object {
      "attributeName": "todoId",
      "keyType": "HASH",
    },
    Object {
      "attributeName": "name",
      "keyType": "RANGE",
    },
  ],
  "provisionedThroughput": Object {
    "readCapacityUnits": 5,
    "writeCapacityUnits": 5,
  },
  "sseSpecification": Object {
    "sseEnabled": true,
  },
  "streamSpecification": Object {
    "streamViewType": "NEW_AND_OLD_IMAGES",
  },
  "tableName": "mockTableName",
}
`;

exports[`Custom Resource Lambda Tests Get next GSI update should compute addition correctly 1`] = `
Object {
  "AttributeDefinitions": Array [
    Object {
      "AttributeName": "sk",
      "AttributeType": "S",
    },
  ],
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Create": Object {
        "IndexName": "gsi2",
        "KeySchema": Array [
          Object {
            "AttributeName": "sk",
            "KeyType": "HASH",
          },
        ],
        "Projection": Object {
          "ProjectionType": "ALL",
        },
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Get next GSI update should compute deletion correctly 1`] = `
Object {
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Delete": Object {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Get next GSI update should compute next addition correctly 1`] = `
Object {
  "AttributeDefinitions": Array [
    Object {
      "AttributeName": "newKey",
      "AttributeType": "S",
    },
  ],
  "GlobalSecondaryIndexUpdates": Array [
    Object {
      "Create": Object {
        "IndexName": "gsi3",
        "KeySchema": Array [
          Object {
            "AttributeName": "newKey",
            "KeyType": "HASH",
          },
        ],
        "Projection": Object {
          "ProjectionType": "ALL",
        },
      },
    },
  ],
  "TableName": "test-table",
}
`;
